#133  Компоненты отображения grid-блоков в контенте

--- a/public/demo.html
+++ b/public/demo.html
@@ -15,7 +15,7 @@
 (function() {
   var element = React.createElement(
     Seine.Content,
-    {component: 'main'},
+    {as: 'main'},
     [
       {
         id: '0',
